--- a/Lab1/css/style.css
+++ b/Lab1/css/style.css
@@ -29,3 +29,45 @@
 #reverse {
     float: left;
 }
+
+.legend {
+    line-height: 22px;
+    color: #555;
+}
+.legend i {
+    width: 20px;
+    height: 20px;
+    float: left;
+    margin-right: 8px;
+    opacity: 0.7;
+}
+
+
+.control {
+    line-height: 22px;
+    color: #555;
+}
+
+.star{
+  font-size: 1.5em;
+} 
+
+.prop {
+    padding: 0px 3px;
+    font: 12px/16px Arial, Helvetica, sans-serif;
+    background: white;
+    background: rgba(255,255,255,0.8);
+    box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    border-radius: 5px;
+    width: 120px;
+}
+
+.choro {
+    padding: 0px 3px;
+    font: 12px/16px Arial, Helvetica, sans-serif;
+    background: white;
+    background: rgba(255,255,255,0.8);
+    box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    border-radius: 5px;
+    width:120px;
+}
