--- a/Lab1/css/style.css
+++ b/Lab1/css/style.css
@@ -3,38 +3,18 @@
     margin: 0.2em 0;
 }
 
-#mapporp {
-    height: 400px;
-    width: 80%;
+#map {
+    height: 450px;
+    width: 100%;
     display: inline-block;
 }
 
-#mapchoro {
-    height: 400px;
-    width: 0%;
-    display: inline-block;
-}
 
-#panel {
-    width: 16%;
-    padding: 20px;
-    display: inline-block;
-    vertical-align: top;
-    text-align: center;
-    line-height: 42px;
-}
 
 .range-slider {
     width: 50%;
 }
 
-#forward {
-    float: right;
-}
-
-#reverse {
-    float: left;
-}
 
 .legend {
     line-height: 22px;
@@ -54,26 +34,30 @@
     color: #555;
 }
 
-.star{
-  font-size: 1.5em;
-} 
 
-.prop {
-    padding: 0px 3px;
-    font: 12px/16px Arial, Helvetica, sans-serif;
-    background: white;
-    background: rgba(255,255,255,0.8);
-    box-shadow: 0 0 15px rgba(0,0,0,0.2);
-    border-radius: 5px;
-    width: 120px;
+
+.sequence-control-container {
+    width: 240px;
+    height: 30px;
+    background-color: rgba(255,255,255,0.8);
+    padding: 10px;
+    line-height: 45px;
+    text-align: center;
+    border: solid gray 1px;
 }
 
-.choro {
-    padding: 0px 3px;
-    font: 12px/16px Arial, Helvetica, sans-serif;
-    background: white;
-    background: rgba(255,255,255,0.8);
-    box-shadow: 0 0 15px rgba(0,0,0,0.2);
-    border-radius: 5px;
-    width:120px;
+.title-container {
+    width: 700px;
+    height: 30px;
+    background-color: rgba(255,255,255,0.8);
+    padding: 5px;
+    line-height: 45px;
+    text-align: center;
+	font: 24px/28px Arial, Helvetica, sans-serif;
+	font-weight: 600;
+
+}
+
+.range-slider {
+    width: 200px;
 }
